--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,176 @@
 @import url(variables.css);
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "SF-Pro-Text-Regular";
+}
+
+@media (width <= 800px) {
+body{
+    background:var(--color-primario) ;
+    width: 100%;
+    height: 100vh;    
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+    grid-template-areas: 
+    "logo logo logo logo logo"
+    "user user user user user"
+    "user user user user user"
+    "savings savings assets assets ."
+    "card card card card card"
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ". . . . ."
+    ;
+}
+
+.banner{
+    position: absolute;
+}
+
+.item_1{
+    grid-area: logo;
+    display: flex;
+    font-size: 10px;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 0 0 10px;
+}
+
+.item_1 .logo_nombre{
+    display: flex;
+    align-items: center;
+}
+
+.item_1 .logo_nombre img{
+    width: 30px;
+    padding-right: 5px;
+}
+
+.item_1 .logo_nombre h1{
+    width: 25px;
+    color: var(--color-ternario);
+}
+
+.item_1 .menu{
+    display: flex;
+    align-items: center;
+}
+
+.item_1 .menu img{
+    width: 30px;
+    padding-right: 5px;
+}
+
+.item_2{
+    grid-area: user;
+    display: flex;
+    color: var(--color-ternario);
+    align-items: center;
+    padding-left: 15px;
+}
+.item_2 .nombre_user h1{
+    font-family: "SF-Pro-Text-Heavy";
+    font-size: 40px;
+}
+.item_2 .nombre_user p{
+    font-family: "SF-Pro-Text-Light";
+    font-size: 30px;
+}
+
+.ganancias{
+    padding-top: 5px;
+    width: 145%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.item_3{
+    font-family: "SF-Pro-Text-Medium";
+    color: var(--color-ternario);
+    grid-area: savings;
+}
+
+.item_4{
+    font-family: "SF-Pro-Text-Medium";
+    color: var(--color-ternario);
+    grid-area: assets;
+}
+
+progress[value] {
+    appearance: none;
+    border: none;
+    height: .5em;
+    border-radius: 10em;
+    width: 120px;
+}
+
+.item_3 progress[value]::-webkit-progress-bar,
+.item_4 progress[value]::-webkit-progress-bar{
+    border-radius: 10em;
+    height: .5em;
+    background: var(--color-ternario);
+}
+
+.item_3 progress[value]::-webkit-progress-value {
+    border-radius: 10em;
+    background: var(--color-secundario);
+}
+
+.item_4 progress[value]::-webkit-progress-value {
+    border-radius: 10em;
+    background: var(--color-cuarto);
+}
+
+.menu_blanco{
+    margin-top: 15px;
+    border-top-right-radius: 50px;
+    border-top-left-radius: 50px;
+    grid-area: card;
+    width: 100%;
+    background: var(--color-ternario);
+}
+
+.activities{
+    margin-top: 50px;
+    margin-left: 25px;
+    font-size: 30px;
+    font-family: "SF-Pro-Text-Bold";
+}
+
+/* .item_5{
+    margin-left: 25px;
+    margin-top: 5px;
+} */
+
+.cards{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.cards img{
+    width: 50px;
+}
+
+.card_1, .card_2, .card_3{
+    display: flex;
+    width: 100px;
+    height: 150px;
+    background: var(--color-ternario);
+    box-shadow: 0px 0px 17px 0px rgba(51,64,79,0.59);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    margin-top: 10px;
+}
+
+
+
+}
