--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
     height: 100vh;    
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(9, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     grid-template-areas: 
     "logo logo logo logo logo"
     "user user user user user"
@@ -22,9 +22,6 @@ body{
     "savings savings assets assets ."
     "menu menu menu menu menu"
     "card card card card card"  
-    "card card card card card" 
-    "card card card card card" 
-    "card card card card card" 
     ;
 }
 
@@ -200,7 +197,6 @@ progress[value] {
     height: 105vh;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
     gap: 15px
 }
 
@@ -208,6 +204,13 @@ progress[value] {
 .item_6 img{
     width: 50px;
     height: 50px;
+}
+
+.compras_cards{
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    height: 100px;
 }
 
 .compras_cards_items{
