style: :lipstick: font introduction

--- a/view/cards.html
+++ b/view/cards.html
@@ -72,16 +72,16 @@
                 <a href="#"><img src="../storage/img/icon.png" alt=""></a>
             </li>
             <li>
-                <a href="#"><img src="../storage/img/icon-1.png" alt=""></a>
+                <a href="cards.html"><img src="../storage/img/icono_selector_cards.png" alt=""></a>
             </li>
             <li>
-                <a href="#"><img src="../storage/img/icon-2.png" alt=""></a>
+                <a href="balance.html"><img src="../storage/img/icon-2.png" alt=""></a>
             </li>
             <li>
                 <a href=""><img src="../storage/img/icon-3.png" alt=""></a>
             </li>
             <li>
-                <a href=""><img src="../storage/img/icon-4.png" alt=""></a>
+                <a href="/index.html"><img src="../storage/img/user_normal.png" alt=""></a>
             </li>
 
         </ul>
