--- a/css/balance.css
+++ b/css/balance.css
@@ -8,6 +8,7 @@
 }
 
 .header{
+    background: var(--color-primario);
     width: 100%;
     padding: 0 .5em;
     display: flex;
@@ -29,6 +30,7 @@
 .logo__icono img{
     width: 3em;
 }
+
 .logo__titulo{
     color: var(--color-ternario);
     font-family: "SF-Pro-Text-Bold";
@@ -42,7 +44,7 @@
 
 .main{
     grid-gap: 10px;
-    height: 100%;
+    height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, 1fr);
@@ -73,7 +75,7 @@
 .total{
     margin-top: 175px;
     width: 100%;
-    height: 100%;
+    height: 90%;
     display: flex;
     align-items: center;
     flex-direction: column;
