--- a/css/variables.css
+++ b/css/variables.css
@@ -1,9 +1,9 @@
 :root{
-    --color-primario: #33404F;
-    --color-secundario: #00DDA3;
+    --color-primario: #717C89;
+    --color-secundario: #ADF6B1;
     --color-ternario: #FFFFFF;
-    --color-cuarto: #B5C5C3;
-    --color-quinto: #E1FFEF;
+    --color-cuarto: #8AA2A9;
+    --color-quinto: #A1E5AB;
 }
 @font-face {
     font-family: "SF-Pro-Text-Bold";
