--- a/view/balance.html
+++ b/view/balance.html
@@ -59,16 +59,16 @@
                 <a href="#"><img src="../storage/img/icon.png" alt=""></a>
             </li>
             <li>
-                <a href="#"><img src="../storage/img/icon-1.png" alt=""></a>
+                <a href="cards.html"><img src="../storage/img/icon-1.png" alt=""></a>
             </li>
             <li>
-                <a href="#"><img src="../storage/img/icon-2.png" alt=""></a>
+                <a href="balance.html"><img src="../storage/img/icon_selector_balance.png" alt=""></a>
             </li>
             <li>
                 <a href=""><img src="../storage/img/icon-3.png" alt=""></a>
             </li>
             <li>
-                <a href=""><img src="../storage/img/icon-4.png" alt=""></a>
+                <a href="/index.html"><img src="../storage/img/user_normal.png" alt=""></a>
             </li>
         </ul>
     </footer>
